# vortex

./: Cargo.toml  LICENSE  README.md  index.js  install.ps1  install.sh  package-lock.json  package.json
.github/workflows/: deploy-pages.yml  publish.yml  release.yml
docs/site/: index.html
docs/site/public/: install.ps1
docs/site/src/: main.js  style.css
example/: main.tex
scripts/: build_all.ps1  release.ps1  release.sh
src/: compiler.js  compiler.rs  installer.rs  main.rs  server.js  server.rs  ui.rs  updater.js  ws-client.js
