[package]
name = "qtex"
version = "1.1.34"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
indicatif = "0.17"
notify = "6.1"
walkdir = "2.4"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
open = "5.0"
dirs = "5.0"
futures = "0.3"
